Fixed an issue of a scrollbar appering in the GameStartScreen View when loading the page ( created by the animate.css library's animate__backInUp ) NOW FIXED !!!

--- a/MatchFixer-Web-App/wwwroot/css/site.css
+++ b/MatchFixer-Web-App/wwwroot/css/site.css
@@ -32,9 +32,10 @@ html {
 }
 
 html, body {
-    overflow-x: hidden;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 ::-webkit-scrollbar {
